# nonlinear_conjugate_gradient

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  alireza  cmake_install.cmake  main.cpp  nonlinear_conjugate_gradient  nonlinear_conjugate_gradient.cbp  random_test.cpp
includes/: cg.h  eigen_omp_oprod.h  external_libs.h  line_search.h  methods.h  problem.h  results.h
nonlinear_conjugate_gradient/: README.md
nonlinear_conjugate_gradient/includes/: cg.h  external_libs.h
nonlinear_conjugate_gradient/src/: results.cpp
nonlinear_conjugate_gradient/tests/: random_test.cpp
src/: cg.cpp  line_search.cpp  problem.cpp
tests/: eigen_omp_oprod.cpp  log_reg_random_test.cpp  random_test.cpp
